--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,8 @@ readme = "README.md"
 python = "^3.13"
 flask = {extras = ["async"], version = "^3.1.0"}
 flask-wtf = "^1.2.2"
-aiofile = "^3.9.0"
 waitress = "^3.0.1"
+aiofiles = "^24.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
