--- a/.github/workflows/make_docker_image.yml
+++ b/.github/workflows/make_docker_image.yml
@@ -16,6 +16,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
       
+      - name: Find out commit sha
+        id: commit
+        run: echo "sha=$(git rev-parse HEAD~)\n" >> $GITHUB_OUTPUT
+      
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
       
@@ -33,6 +37,8 @@ jobs:
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
           context: .
+          build-args:
+            - COMMIT: ${{ steps.commit.outputs.id }}
           platforms: linux/amd64,linux/arm64
           push: true
           tags: ghcr.io/insanolanbiri/sozluk:latest
