--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ flask = {extras = ["async"], version = "^3.1.0"}
 flask-wtf = "^1.2.2"
 waitress = "^3.0.1"
 aiofiles = "^24.1.0"
+psutil = "^6.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
