--- a/.github/workflows/make_docker_image.yml
+++ b/.github/workflows/make_docker_image.yml
@@ -37,7 +37,7 @@ jobs:
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
           context: .
-          build-args: COMMIT=${{ steps.commit.outputs.id }}
+          build-args: VCS_TAG=${{ steps.commit.outputs.sha }}
           platforms: linux/amd64,linux/arm64
           push: true
           tags: ghcr.io/insanolanbiri/sozluk:latest
