--- a/.github/workflows/make_docker_image.yml
+++ b/.github/workflows/make_docker_image.yml
@@ -14,11 +14,13 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       
       - name: Find out commit sha
         id: commit
-        run: echo "sha=$(git rev-parse HEAD~)\n" >> $GITHUB_OUTPUT
+        run: echo "sha=$(git rev-parse HEAD~)" >> $GITHUB_OUTPUT
       
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
