ci: use correct commit sha on build
This commit respects to the fact that `HEAD~` has a different meaning
than `HEAD`.
Turns out, that tilde reprensents the commit before the reference.

--- a/.github/workflows/make_docker_image.yml
+++ b/.github/workflows/make_docker_image.yml
@@ -20,7 +20,7 @@ jobs:
       
       - name: Find out commit sha
         id: commit
-        run: echo "sha=$(git rev-parse HEAD~)" >> $GITHUB_OUTPUT
+        run: echo "sha=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
       
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
