--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ waitress = "^3.0.1"
 aiofiles = "^24.1.0"
 psutil = "^6.1.0"
 emoji = "^2.14.0"
+sqlalchemy = "^2.0.36"
 
 
 [tool.poetry.group.dev.dependencies]
