--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,8 @@
             "module": "flask",
             "env": {
                 "FLASK_APP": "sozluk/app.py",
-                "FLASK_DEBUG": "1"
+                "FLASK_DEBUG": "1",
+                "VCS_TAG": "development",
             },
             "args": [
                 "run",
