--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ aiofiles = "^24.1.0"
 psutil = "^6.1.0"
 emoji = "^2.14.0"
 sqlalchemy = "^2.0.36"
-gunicorn = "^23.0.0"
+pyuwsgi = "^2.0.28.post1"
 
 
 [tool.poetry.group.dev.dependencies]
