--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,7 @@
                 "FLASK_APP": "sozluk/app.py",
                 "FLASK_DEBUG": "1",
                 "VCS_TAG": "development",
+                "DEBUG": "true"
             },
             "args": [
                 "run",
